--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -2,11 +2,12 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "03ae5693-1c55-422d-ab91-73a54e603759"
   },
   "newProjectRoot": "projects",
   "projects": {
-    "y": {
+    "metron": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -52,7 +53,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -61,10 +68,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "y:build:production"
+              "buildTarget": "metron:build:production"
             },
             "development": {
-              "buildTarget": "y:build:development"
+              "buildTarget": "metron:build:development"
             }
           },
           "defaultConfiguration": "development"
